# EC_Docs

./: BackToC.odt  Install.md  ToDo.md  introduction.md
examples/1.helloworld/: CMakeLists.txt  example
examples/1.helloworld/src/: main.c  main.h
examples/2.EC_Variable/: CMakeLists.txt  example
examples/2.EC_Variable/src/: main.c  main.h  student.c  student.h
examples/3.EC_Array/: example  session_array_example.vim
examples/3.EC_Array/src/: main.c  student.h
examples/4.EC_List/: cmake.sh  session_array_example.vim
examples/4.EC_List/src/: main.c  student.c  student.h
examples/EC/: .gitignore  INSTALL  LICENSE.txt  README.md  ec
examples/EC/.ec/: CMakeLists.txt  ec_check_dependency.sh  ec_make.sh  ec_todo  ec_todo.tmp  ec_user.tmp
examples/EC/doc/: DevelopersGuide.md  Tutorial.md  dev.odt
examples/EC/doc/man/: ec.1.man
examples/EC/include/: ec.h  ec_array.h  ec_error.h  ec_file.h  ec_list.h  ec_memory.h  ec_queue.h  ec_stack.h  ec_string.h  ec_variable.h
examples/EC/src/: ec.c  ec.h  ec_array.c  ec_array.h  ec_c_file.c  ec_c_file.h  ec_debug.c  ec_debug.h  ec_ecs.c  ec_ecs.h  ec_error.c  ec_error.h  ec_file.c  ec_file.h  ec_list.c  ec_list.h  ec_macro.c  ec_macro.h  ec_memory.c  ec_memory.h  ec_queue.c  ec_queue.h  ec_stack.c  ec_stack.h  ec_string.c  ec_string.h  ec_test.c  ec_test.h  ec_text_color.c  ec_text_color.h  ec_time.c  ec_time.h  ec_todo.c  ec_todo.h  ec_type.c  ec_type.h  ec_var.c  ec_var.h  ec_version.c  ec_version.h  (+3 more)
examples/EC/tests/: README.md  test
examples/EC/tests/.ec/: CMakeLists.txt  ec_make.sh  ec_run.sh
examples/EC/tests/src/: c_file.c  c_file.h  component.h  ec_array_test.c  ec_array_test.h  ec_c_file_test.c  ec_c_file_test.h  ec_ec_test.c  ec_ec_test.h  ec_ecs_test.c  ec_ecs_test.h  ec_file_test.c  ec_file_test.h  ec_list_test.c  ec_list_test.h  ec_macro_test.c  ec_macro_test.h  ec_main_test.c  ec_main_test.h  ec_queue_test.c  ec_queue_test.h  ec_stack.h  ec_stack_test.c  ec_stack_test.h  ec_time_test.c  ec_time_test.h  ec_var_test.c  ec_var_test.h  student.c  student.h
examples/List/fruit/: CMakeLists.txt  ec_make.sh
examples/List/fruit/include/: fruit.h  fruit_version.h
examples/List/fruit/src/: fruit.c
examples/back/odp_sample/: bullet.c  bullet.h  bullet_enemy.c  bullet_enemy.h  enemy.c  enemy.h  main.c  player.c  player.h  session.vim  system.h
examples/cards/: cards
examples/cards/.ec/: CMakeLists.txt  ec_make.sh  ec_remove_todo_tmp.sh  ec_run.sh
examples/cards/src/: cards.c  cards.h  cards_version.h
images/: documents.xcf  extendedc.xcf  extendedc2.xcf  logo.xcf  mountain.xcf  rocket.xcf  workspace.xcf
odt/: 1. C_Basics.odt  2.ExtendedC.odt  EC programming.odt  EC_Manuel_EN.odt  ec things  ec_memory.odt
